--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rc-overflow",
-  "version": "1.3.2",
+  "name": "rc-overflow-modern",
+  "version": "1.3.6",
   "description": "Auto collapse box when overflow",
   "keywords": [
     "react",
@@ -38,7 +38,6 @@
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "rc-test",
     "test:coverage": "rc-test --coverage",
-    "prepublishOnly": "npm run compile && np --no-cleanup --yolo --no-publish",
     "lint": "eslint src/ --ext .tsx,.ts",
     "lint:tsc": "tsc -p tsconfig.json --noEmit",
     "now-build": "npm run docs:build"
@@ -46,8 +45,8 @@
   "dependencies": {
     "@babel/runtime": "^7.11.1",
     "classnames": "^2.2.1",
-    "rc-resize-observer": "^1.0.0",
-    "rc-util": "^5.37.0"
+    "rc-resize-observer": "npm:rc-resize-observer-modern@^1.0.0",
+    "rc-util": "npm:rc-util-modern@^5.37.0"
   },
   "devDependencies": {
     "@rc-component/father-plugin": "^1.0.0",
